# Distributed-Futures

./: AUTHORS  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  README.md  TODOS  aclocal.m4  clean.py  cmake_install.cmake  config.h.in~  configure  configure.ac  gen_plots.py  install_manifest.txt  mean.py  plot.py  run.py  run_all.py  run_lu_all.py
armci_futures/: future.hpp  futures_enviroment.hpp  promise.hpp
benchmarks/: CMakeLists.txt  timer.hpp
benchmarks/blackscholes/: CMakeLists.txt  OpenDoor.js  blackscholes.cpp
benchmarks/tiledLU/: CMakeLists.txt  kernels.cpp  kernels.hpp  lu.cpp  matrix.hpp  run.sh
cereal/archives/: raw.hpp  size.hpp
doc/: Doxyfile.in  Makefile  abstract_gr.tex  chapters.tex  comparison.tex  frontpage.tex  implementation.tex  introduction.tex  references.bib  signatures.tex  thesis.aux  thesis.bbl  thesis.blg  thesis.dvi  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
doc/Thesis/: Makefile  Makefile~  abstract_en.tex  abstract_en.tex~  abstract_fr.tex  abstract_gr.tex  ack.tex  background.tex  conclusions.tex  evaluation.tex  extraFeatures.tex  extraFeatures.tex~  frontpage.tex  implementation.tex  introduction.tex  introduction.tex~  methodology.tex  references.bib  references.bib~  related.tex  report.aux  report.bbl  report.blg  report.dvi  report.out  report.tex  report.toc  report_extra.aux  report_extra.blg  report_extra.dvi  report_extra.out  report_extra.tex  report_extra.tex~  report_extra.toc  results.tex  signatures.eps  signatures.tex  statement.tex  thesis.aux  thesis.bbl  (+7 more)
doc/Thesis/figures/: 3x3example.eps  3x3example.tex  alloc.dia  app_breakdowns_12cores.perf  app_breakdowns_4cores.perf  app_breakdowns_6cores.eps  app_breakdowns_6cores.perf  app_breakdowns_beowulf.eps  app_breakdowns_beowulf.perf  app_breakdowns_minititan.eps  app_breakdowns_minititan.perf  app_breakdowns_w_init.eps  app_breakdowns_w_init.perf  apps_scalability.eps  apps_scalability.perf  apps_scalability_beowulf.eps  apps_scalability_beowulf.perf  apps_scalability_minititan.eps  apps_scalability_minititan.perf  apps_scalability_minititan_cereal.perf  apps_speedup.eps  apps_speedup.perf  apps_speedup_beowulf.eps  apps_speedup_beowulf.perf  apps_speedup_minititan.eps  apps_speedup_minititan.perf  apps_speedup_minititan_cereal.eps  apps_speedup_minititan_cereal.perf  fib5_tasks.dia  fib_tasks.dia  fib_tasks.eps  free_lists.dia  free_lists.eps  future_blocking.dia  job_issue_time_different_argnums_same_size_bars.eps  job_issue_time_different_argnums_same_size_bars.perf  job_issue_time_different_argsizes.eps  job_issue_time_different_argsizes.perf  job_issue_time_scalar_vs_container_bars.eps  lu_task_graph_3x3.eps  (+2 more)
doc/figures/: free_lists.dia.autosave  hello_flow.dia  hello_flow.eps  system_overview.eps
doc/presentation/: Makefile  beamercolorthemepsud.sty  presentation.nav  presentation.tex  presentation.vrb  presentation1.tex  presentation2.tex
doc/presentation/images/: 3x3example.eps  3x3example.tex  alloc.eps  app_breakdowns_12cores.eps  app_breakdowns_4cores.eps  app_breakdowns_w_init.eps  apps_scalability.eps  apps_scalability_minititan_cereal.eps  fib3_tasks.dia  fib3_tasks.eps  fib5_tasks.eps  free.dia  free.eps  futures_blocking.eps  inter-exp-barrier.dia  inter-exp-barrier.eps  inter-exp-fut.dia  inter-exp-fut.eps  inter-exp.dia  inter-exp.eps  job_issue_time_different_argnums_same_size_bars.eps  job_issue_time_scalar_vs_container_bars.eps  job_issue_time_scalar_vs_container_bars.perf  lriups.eps  lu_task_graph_3x3.eps  scalability.eps  system_overview.dia  task_stack.dia
futures/: Makefile.am  Makefile.in  apply_function.hpp  common.hpp  details.hpp  future.hpp  future_fwd.hpp  futures.hpp  futures.pc.in  futures_enviroment.cpp  futures_enviroment.hpp  futures_environment.cpp  futures_environment.hpp  promise.hpp
futures/communication/: ARMCIComm.cpp  ARMCIComm.hpp  MPIAsyncComm.cpp  MPIAsyncComm.hpp  MPIComm.cpp  MPIComm.hpp  MPISharedMemory.cpp  MPISharedMemory.hpp  armci_comm.hpp  commManager.cpp  commManager.hpp  communication.hpp  mpi_comm.hpp  mpi_details.hpp
futures/futures/.deps/: futures_environment.Plo
futures/logger/: logger.cpp  logger.hpp
futures/mem/: SharedMemoryManager.cpp  SharedMemoryManager.hpp
futures/scheduler/: RR.cpp  RR.hpp  master.cpp  master.hpp  process.hpp  schedManager.cpp  schedManager.hpp  scheduler.hpp  taskQueue.cpp  taskQueue.hpp  taskStack.cpp  taskStack.hpp  worker.cpp  worker.hpp
futures/stats/: stats.cpp  stats.hpp
futures/worker/: worker.cpp
m4/: boost.m4
mpi_futures/: future.hpp  futures_enviroment.hpp  promise.hpp
mutex/: MPIMutex.cpp  MPIMutex.hpp  Makefile.am  Makefile.in  mutex.hpp  mutex.pc.in
perfs/: plot.py
src/futures/: CMakeLists.txt  Makefile  cmake_install.cmake  futures_environment.cpp
src/futures/communication/: MPIComm.cpp  commManager.cpp
src/futures/mem/: SharedMemoryManager.cpp
src/futures/scheduler/: RR.cpp  master.cpp  schedManager.cpp  taskQueue.cpp  taskStack.cpp  worker.cpp
src/futures/stats/: stats.cpp
src/mutex/: CMakeLists.txt  MPIMutex.cpp  Makefile  cmake_install.cmake
tests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bench_issue_container.cpp  bench_issue_scalar.cpp  benchmark1.cpp  cmake_install.cmake  factorial.cpp  fib.cpp  hello.cpp  kernels.cpp  lapacke.h  lu.cpp  lu_boost.cpp  lu_mpi.cpp  lu_plasma.cpp  lu_seq.cpp  lu_threads.cpp  matrix.hpp  ping_pong.cpp  power.cpp  quicksort.cpp  run.sh  test.cpp  test1.cpp  test_array_of_objects.cpp  test_arrays.cpp  test_object.cpp  timer.hpp
